test/library/standard/DateTime/timezoneAwarenessMismatch.3.good
timezoneAwarenessMismatch.chpl:48: error: both dateTimes must both be either naive or aware
